css/style.css
body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin: 0;
  padding: 0;
  font-family: Helvetica, sans-serif;
  background-color: #fafafa;
  justify-content: space-between;
}

* {
  box-sizing: border-box;
}

button {
  cursor: pointer;
}

/* Header/Footer */

header {
  display: flex;
  grid-template-columns: 1fr auto 1fr;
  height: 100px;
  background-color: #eaeaea;
  align-items: center;
  padding: 0px 3%;
}

.header-item {
  flex: 1;
  display: flex;
  padding: 0;
  margin: 0;
}

#logo {
  justify-content: center;
}

.home-link {
  text-decoration: none;
  color: #000000;
}

.home-link:hover {
  filter: invert(60%) sepia(0%) saturate(1500%) hue-rotate(250deg)
    brightness(35%) contrast(70%);
}

#right-icons {
  justify-content: right;
  gap: 32px;
  list-style-type: none;
  margin-left: auto;
}

header button {
  border: 0;
  background-color: #ebebeb;
}

footer {
  display: flex;
  flex-direction: column;
  gap: 8px;
  height: 100px;
  background-color: #eaeaea;
  align-items: center;
  justify-content: center;
}

footer a {
  color: #4c4c4c;
}

/* Navigation Menu */

.menu-btn {
  justify-content: left;
  margin-right: auto;
}

nav ul {
  margin: 0;
  padding: 15px 0;
}

nav li {
  list-style-type: none;
  margin: 0;
  padding: 0 5px;
}

.pushy-link:hover {
  background-color: #2e2e2e;
}

.selected-page {
  background-color: #2a2a2a;
}

/* https://codepen.io/sosuke/pen/Pjoqqp */
.icon:hover {
  filter: invert(60%) sepia(0%) saturate(1500%) hue-rotate(250deg)
    brightness(35%) contrast(70%);
}

/* Home  */

.carousel-cell {
  width: 100%;
  height: 700px;
  object-fit: cover;
}

.home .product {
  margin-top: 8px;
}

.product-name {
  font-size: 18px;
  font-weight: bold;
  margin-top: 12px;
  margin-bottom: 10px;
}

.product-price {
  margin: 0;
}

/* Gallery */

.gallery {
  display: grid;
  justify-content: center;
  align-items: center;
  margin: 50px 0;
  width: 100vw;
  grid-template-columns: repeat(auto-fill, minmax(420px, 420px));
  column-gap: 32px;
  row-gap: 35px;
}

.gallery a img {
  width: 420px;
  height: 420px;
  object-fit: cover;
  object-position: center;
}

/* Products */

.products-page main {
  display: flex;
}

.categories {
  display: flex;
  flex-direction: column;
  background-color: #f0f0f0;
  margin: 0;
  height: 100%;
  width: 250px;
  padding: 75px 60px;
  gap: 40px;
}

.categories li {
  list-style-type: none;
}

.categories a {
  text-decoration: none;
  color: #808080;
}

.categories a:hover {
  color: #9f9f9f;
}

.selected-category {
  font-weight: bold;
}

.products {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(420px, 420px));
  column-gap: 55px;
  row-gap: 75px;
  padding: 35px;
  width: 100%;
  justify-items: center;
  justify-content: center;
  margin: 15px 0 75px 0;
}

.product {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  margin-top: 22px;
  width: 100%;
  height: 100%;
}

.home .products {
  grid-template-columns: repeat(auto-fill, minmax(390px, 390px));
  margin-top: 75px;
}

.product-buttons {
  display: flex;
  gap: 16px;
  margin-top: 19px;
}

.product-buttons button {
  height: 34px;
  width: 100%;
  font-size: 70%;
}

.button-add-to-cart {
  border: 0;
  background-color: #4c4c4c;
  color: white;
}

.button-add-to-cart:hover {
  background-color: #5c5c5c;
}

.button-info {
  background-color: white;
  border: 1px solid #4c4c4c;
}

.button-info:hover {
  background-color: #efefef;
}

.image-float {
  -webkit-transition: margin 0.25s ease-out;
  -moz-transition: margin 0.25s ease-out;
  -o-transition: margin 0.25s ease-out;
}

.image-float:hover {
  cursor: pointer;
  margin: 8px;
}

@media (max-width: 768px) {
  .categories {
    flex-direction: row;
    width: 100%;
    height: 132px;
    justify-content: center;
    align-items: center;
    gap: 5%;
    padding: 0;
  }

  .products-page main {
    flex-direction: column;
  }

  .products {
    grid-template-columns: repeat(auto-fill, minmax(90%, 90%));
    column-gap: 55px;
  }

  .product {
    width: 70%;
    height: auto;
  }
}

/* Contact Us */

#contact {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 54px 0;
}

#contact div {
  display: flex;
  flex-direction: column;
}

#contact h1 {
  margin-top: 0;
}

#form {
  display: flex;
  flex-direction: column;
  width: 45%;
  min-width: 200px;
  max-width: 600px;
}

#contact label {
  margin-top: 18px;
}

#contact p {
  margin: 8px 0;
  font-size: 13px;
  color: red;
}

#form span {
  color: red;
}

#form input {
  margin-top: 8px;
  height: 32px;
  background-color: #f8f8f8;
  border: 1px solid #656565;
}

#comment textarea {
  min-width: 100%;
  height: 150px;
  margin-top: 8px;
  background-color: #f8f8f8;
  border: 1px solid #656565;
}

#form #submit {
  background-color: #4c4c4c;
  width: 110px;
  height: 32px;
  color: white;
  border: 0;
  font-weight: bold;
  text-align: center;
  margin-top: 26px;
}

#submit:hover {
  background-color: #5c5c5c;
  cursor: pointer;
}

